--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"cypress:open": "cypress open"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^1.0.5",
@@ -21,6 +22,7 @@
 		"@types/node": "^14.6.0",
 		"@types/react": "^17.0.3",
 		"@types/react-dom": "^17.0.3",
+		"cypress": "^9.5.3",
 		"eslint": "^8.12.0",
 		"eslint-config-next": "^12.1.2",
 		"typescript": "4.3.2"
