--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"cypress:open": "cypress open"
+		"cypress:open": "cypress open",
+		"test": "start-server-and-test dev 3000 cypress:open"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^1.0.5",
@@ -25,6 +26,7 @@
 		"cypress": "^9.5.3",
 		"eslint": "^8.12.0",
 		"eslint-config-next": "^12.1.2",
+		"start-server-and-test": "^1.14.0",
 		"typescript": "4.3.2"
 	}
 }
