--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 		"@chakra-ui/theme-tools": "1.1.2",
 		"@emotion/react": "11.1.5",
 		"@emotion/styled": "11.1.5",
+		"axios": "^0.26.1",
+		"formik": "^2.2.9",
 		"framer-motion": "^4.0.3",
 		"next": "latest",
 		"react": "^17.0.2",
-		"react-dom": "^17.0.2"
+		"react-dom": "^17.0.2",
+		"yup": "^0.32.11"
 	},
 	"devDependencies": {
 		"@types/node": "^14.6.0",
@@ -26,6 +29,7 @@
 		"cypress": "^9.5.3",
 		"eslint": "^8.12.0",
 		"eslint-config-next": "^12.1.2",
+		"json-server": "^0.17.0",
 		"start-server-and-test": "^1.14.0",
 		"typescript": "4.3.2"
 	}
