--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"cypress:open": "cypress open",
-		"test": "start-server-and-test dev 3000 cypress:open"
+		"develop": "start-server-and-test dev 3000 cypress:open",
+		"start-json-server": "json-server --watch src/utils/db/todos.json --port 3001"
 	},
 	"dependencies": {
 		"@chakra-ui/icons": "^1.0.5",
